[package]
name = "containerd-shim-hyperlight"
version = "0.1.0"
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
containerd-shimkit = { workspace = true }
hyperlight-host = { version = "0.3", default-features = false, features = ["kvm"] }
log = { workspace = true }
containerd-client = "0.6.0"
oci-spec = { workspace = true, features = ["runtime"] }
tokio = { workspace = true, features = ["full", "tracing"] }
nix = { workspace = true, features = ["sched", "mount"] }
chrono = { workspace = true }
futures = { version = "0.3.30" }
serde_json = { workspace = true }
trait-variant = "0.1"
containerd-shim = { workspace = true }

[[bin]]
name = "containerd-shim-hyperlight-v1"
path = "src/main.rs"

